--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -59,8 +59,9 @@
       <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="DirectShowLib">
-      <HintPath>..\..\..\..\..\Downloads\DirectShowSamples-2010-February (1)\Samples\Capture\DxSnap\bin\Debug\DirectShowLib.dll</HintPath>
+    <Reference Include="DirectShowLib, Version=2.1.0.26941, Culture=neutral, PublicKeyToken=67e7b740cdfc2d3f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\DirectShowLib.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
